# HellEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  HellEngine_Audit_Report.md  HellEngine_Graphics_Phase_Prompts.md  HellEngine_Launch_Prompt.md  HellEngine_Prompt_Usage_Guide.md  README.md  build_check.bat  build_errors.txt  build_installer.ps1  build_release.ps1  do_build.ps1  engine_config.json  env_vars.txt  get_env.ps1  package_dist.ps1  run_tests.ps1
.claude/: settings.local.json
assets/patterns/: sandbox_patterns.json
assets/shaders/: bullet_fs.glsl  bullet_vs.glsl  post_bloom_fs.glsl  post_composite_fs.glsl  post_vignette_fs.glsl
build_fresh/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  boss_phase_tests-b12d07c_include.cmake  build.ninja  cmake_install.cmake  collision_correctness_tests-b12d07c_include.cmake  content_fuzz_tests-b12d07c_include.cmake  content_packer_tests-b12d07c_include.cmake  determinism_property_tests-b12d07c_include.cmake  editor_tools_tests-b12d07c_include.cmake  entity_tests-b12d07c_include.cmake  pattern_graph_tests-b12d07c_include.cmake  pattern_tests-b12d07c_include.cmake  projectile_behavior_tests-b12d07c_include.cmake  projectile_tests-b12d07c_include.cmake  render2d_tests-b12d07c_include.cmake  replay_tests-b12d07c_include.cmake
data/: archetypes.json  art_import_manifest.json  audio.json  difficulty_profiles.json  encounters.json  entities.json  patterns.json  projectiles.json  traits.json
data/palettes/: palette_fx_templates.json
docs/: Architecture.md  AssetImportWorkflow.md  AudioWorkflow.md  AuditReport.md  AuthoringGuide.md  AuthoringPipeline.md  BossEncounterAuthoring.md  BuildAndRelease.md  BuildAndRun.md  CHANGELOG.md  ContentPipeline.md  CreatorPerformanceGuide.md  DecisionLog.md  ExhaustiveAudit_2026-03-10.md  FixNotes.md  GettingStarted.md  GlobalPromptHeader.md  GpuBulletAssumptions.md  HellEngine_Audit_Report.md  ImplementationPlan.md  MasterSpec.md  PaletteAndGrayscaleWorkflow.md  PatternAuthoringGuide.md  PerfTargets.md  PluginAndModOverview.md  PublicAPI.md  Quickstart.md  ReplayAndDebugGuide.md  SampleProjectUsage.md  SampleVerticalSlice.md  Troubleshooting.md
examples/content_packs/: starter_core.json  starter_graphs.json
include/engine/: archetypes.h  audio_content.h  audio_system.h  background_layers.h  bullet_palette.h  bullet_sprite_gen.h  camera_shake.h  config.h  content_pipeline.h  content_watcher.h  crash_handler.h  danger_field.h  defensive_special.h  deterministic_math.h  deterministic_rng.h  diagnostics.h  difficulty_scaling.h  editor_tools.h  encounter_graph.h  entities.h  gameplay_session.h  gameplay_session_subsystems.h  gl_bullet_renderer.h  gpu_bullets.h  gradient_animator.h  input_system.h  job_system.h  level_tile_gen.h  logging.h  math_types.h  memory.h  meta_progression.h  modern_renderer.h  palette_fx_templates.h  palette_ramp.h  particle_fx.h  pattern_generator.h  pattern_graph.h  pattern_signature.h  patterns.h  (+15 more)
include/engine/internal/: plugin_registry.h
include/engine/public/: api.h  engine.h  export.h  plugins.h  versioning.h
installer/: EngineDemo.iss
src/: main.cpp  tools_content_packer.cpp
src/engine/: archetypes.cpp  audio_system.cpp  background_layers.cpp  bullet_palette.cpp  bullet_sprite_gen.cpp  camera_shake.cpp  config.cpp  content_pipeline.cpp  content_watcher.cpp  crash_handler.cpp  danger_field.cpp  defensive_special.cpp  deterministic_math.cpp  deterministic_rng.cpp  diagnostics.cpp  difficulty_scaling.cpp  editor_tools.cpp  encounter_graph.cpp  entities.cpp  gameplay_session.cpp  gameplay_session_subsystems.cpp  gl_bullet_renderer.cpp  gpu_bullets.cpp  gradient_animator.cpp  input_system.cpp  job_system.cpp  level_tile_gen.cpp  logging.cpp  memory.cpp  meta_progression.cpp  modern_renderer.cpp  palette_fx_templates.cpp  palette_ramp.cpp  particle_fx.cpp  pattern_generator.cpp  pattern_graph.cpp  pattern_signature.cpp  patterns.cpp  perf_profiler.cpp  persistence.cpp  (+14 more)
src/engine/editor/: editor_tools_core.cpp  editor_tools_gameplay_panel.cpp  editor_tools_pattern_panel.cpp  editor_tools_services.cpp  editor_tools_workspace_panel.cpp
tests/: archetype_tests.cpp  benchmark_suite.cpp  boss_phase_tests.cpp  collision_correctness_tests.cpp  config_tests.cpp  content_fuzz_tests.cpp  content_import_pipeline_tests.cpp  content_packer_tests.cpp  defensive_special_tests.cpp  determinism_cross_config_test.cpp  determinism_property_tests.cpp  diagnostics_tests.cpp  difficulty_scaling_tests.cpp  editor_tools_tests.cpp  encounter_graph_tests.cpp  entity_tests.cpp  gameplay_session_state_tests.cpp  golden_replay_tests.cpp  gpu_bullets_tests.cpp  meta_progression_tests.cpp  modern_renderer_tests.cpp  palette_fx_templates_tests.cpp  pattern_generator_tests.cpp  pattern_graph_perf_tests.cpp  pattern_graph_tests.cpp  pattern_tests.cpp  persistence_tests.cpp  projectile_behavior_tests.cpp  projectile_tests.cpp  public_api_tests.cpp  render2d_tests.cpp  renderer_smoke_tests.cpp  replay_tests.cpp  run_structure_tests.cpp  standards_tests.cpp  timing_tests.cpp  trait_tests.cpp  upgrade_ui_model_tests.cpp  upgrade_ui_tests.cpp
tools/: build_debug.ps1  build_installer.ps1  build_release.ps1  ci_local.ps1  package_dist.ps1  release_validate.ps1  run_tests.ps1  verify.ps1  verify_installer.ps1
